fix bug with overflow and 640px exact css

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -238,7 +238,7 @@ h1, h2, h3, h4, h5, h6, p, a {
         flex-wrap: nowrap;
         gap: 4rem;
         height: calc(100% - (2 * 2.5rem)) ;
-        padding: 2.5rem 2.5rem 2.5rem 1.5rem;
+        padding: 2.5rem 1.5rem;
     }
 
     .header-logo {
@@ -463,7 +463,7 @@ h1, h2, h3, h4, h5, h6, p, a {
         position: absolute;
         bottom: 2%;
         left: 65%;
-        width: 50%;
+        width: 37%;
         overflow: hidden;
         z-index: 2;
     }
@@ -484,7 +484,7 @@ h1, h2, h3, h4, h5, h6, p, a {
 
     .section-home-text p {
         font-size: 1rem;
-        color: gray;
+        color: #767676;
         line-height: 1.5;
         margin-bottom: 1rem;
     }
@@ -821,7 +821,7 @@ h1, h2, h3, h4, h5, h6, p, a {
 }
 
 .flatmates-dots-row img {
-    opacity: 40%;
+    opacity: 20%;
 }
 
 /*---------------------------*/
@@ -889,7 +889,7 @@ h1, h2, h3, h4, h5, h6, p, a {
 
 .section-events-figures .figure-date {
     font-size: 1rem;
-    color: gray;
+    color: #767676;
 }
 
 /*============ END - SECTIONS ============*/
