--- a/assets/style/style1024.css
+++ b/assets/style/style1024.css
@@ -244,7 +244,7 @@
         position: absolute;
         bottom: 10%;
         left: 65%;
-        width: 35%;
+        width: 30%;
         overflow: hidden;
         z-index: 2;
     }
